--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
     "name": "@mavickers/factor",
     "version": "0.0.3",
     "description": "Scaffolding for client-side web applications.",
-    "main": "index.js",
+    "main": "src/index.js",
     "author": {
         "name": "Michael A. Vickers",
         "url": "https://lightpathllc.com",
         "github": "https://github.com/mavickers"
     },
     "scripts": {
-        "build": "npx babel ./ --out-dir ../../dist --ignore node_modules",
-        "build-package": "node build-package.js"
+        "build": "npx webpack"
     },
     "repository": {
         "type": "git",
@@ -27,9 +26,23 @@
         "url": "https://github.com/mavickers/factor/issues"
     },
     "homepage": "https://github.com/mavickers/factor#readme",
-    "dependencies": {},
+    "dependencies": {
+        "@babel/cli": "^7.12.10",
+        "@babel/preset-env": "^7.12.11",
+        "babel-loader": "^8.2.2",
+        "webpack": "^5.11.1",
+        "webpack-cli": "^4.3.1"
+    },
     "devDependencies": {
+        "@babel/core": "^7.12.10",
+        "babel-eslint": "~10.1.0",
+        "babel-jest": "~26.3.0",
+        "core-js": "^3.6.5",
+        "eslint": "~7.8.1",
+        "eslint-plugin-vue": "~6.2.2",
         "npm": "^6.11.2",
-        "path": "^0.12.7"
+        "npm-run-all": "~4.1.5",
+        "path": "^0.12.7",
+        "raw-loader": "^4.0.2"
     }
 }
