--- a/package.json
+++ b/package.json
@@ -27,14 +27,13 @@
     },
     "homepage": "https://github.com/mavickers/factor#readme",
     "dependencies": {
-        "@babel/cli": "^7.12.10",
-        "@babel/preset-env": "^7.12.11",
-        "babel-loader": "^8.2.2",
-        "webpack": "^5.11.1",
-        "webpack-cli": "^4.3.1"
+
     },
     "devDependencies": {
+        "@babel/cli": "^7.12.10",
         "@babel/core": "^7.12.10",
+        "@babel/preset-env": "^7.12.11",
+        "babel-loader": "^8.2.2",
         "babel-eslint": "~10.1.0",
         "babel-jest": "~26.3.0",
         "core-js": "^3.6.5",
@@ -43,6 +42,8 @@
         "npm": "^6.11.2",
         "npm-run-all": "~4.1.5",
         "path": "^0.12.7",
-        "raw-loader": "^4.0.2"
+        "raw-loader": "^4.0.2",
+        "webpack": "^5.11.1",
+        "webpack-cli": "^4.3.1"
     }
 }
