--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "github": "https://github.com/mavickers"
     },
     "scripts": {
-        "build": "npx webpack"
+        "build": "webpack"
     },
     "repository": {
         "type": "git",
@@ -30,13 +30,14 @@
     "devDependencies": {
         "@babel/cli": "^7.12.10",
         "@babel/core": "^7.12.10",
+        "@babel/plugin-transform-runtime": "^7.12.10",
         "@babel/preset-env": "^7.12.11",
-        "babel-loader": "^8.2.2",
         "babel-eslint": "~10.1.0",
         "babel-jest": "~26.3.0",
+        "babel-loader": "^8.2.2",
+        "babel-plugin-transform-es2015-template-literals": "^6.22.0",
         "core-js": "^3.6.5",
         "eslint": "~7.8.1",
-        "eslint-plugin-vue": "~6.2.2",
         "npm": "^6.11.2",
         "npm-run-all": "~4.1.5",
         "path": "^0.12.7",
