--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "path": "^0.12.7",
         "raw-loader": "^4.0.2",
         "webpack": "^5.11.1",
-        "webpack-cli": "^4.3.1"
+        "webpack-cli": "^4.3.1",
+        "webpack-node-externals": "^2.5.2"
     }
 }
