--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@babel/plugin-transform-runtime": "^7.12.10",
         "@babel/plugin-transform-template-literals": "^7.12.1",
         "@babel/preset-env": "^7.12.11",
+        "assert": "^2.0.0",
         "babel-eslint": "~10.1.0",
         "babel-jest": "~26.3.0",
         "babel-loader": "^8.2.2",
