--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@mavickers/factor",
-    "version": "0.0.9",
+    "version": "0.1.0",
     "description": "Scaffolding for client-side web applications.",
     "main": "src/index.js",
     "author": {
@@ -26,9 +26,7 @@
         "url": "https://github.com/mavickers/factor/issues"
     },
     "homepage": "https://github.com/mavickers/factor#readme",
-    "dependencies": {
-
-    },
+    "dependencies": {},
     "devDependencies": {
         "@babel/cli": "^7.12.10",
         "@babel/core": "^7.12.10",
