--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@mavickers/factor",
     "version": "0.1.0",
-    "description": "Scaffolding for client-side web applications.",
+    "description": "Client-side scaffolding for web applications.",
     "main": "dist/index.js",
     "author": {
         "name": "Michael A. Vickers",
