--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
         "url": "https://lightpathllc.com",
         "github": "https://github.com/mavickers"
     },
+    "type": "module",
     "scripts": {
-        "build": "webpack"
+        "build": "webpack",
+        "test-models": "jest tests/models.test.js"
     },
     "repository": {
         "type": "git",
@@ -36,12 +38,12 @@
         "@babel/plugin-transform-runtime": "^7.12.10",
         "@babel/plugin-transform-template-literals": "^7.12.1",
         "@babel/preset-env": "^7.12.11",
-        "assert": "^2.0.0",
         "babel-eslint": "~10.1.0",
         "babel-jest": "~26.3.0",
         "babel-loader": "^8.2.2",
         "core-js": "^3.6.5",
         "eslint": "~7.8.1",
+        "jest": "^26.6.3",
         "npm": "^6.11.2",
         "npm-run-all": "~4.1.5",
         "path": "^0.12.7",
