--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
         "url": "https://lightpathllc.com",
         "github": "https://github.com/mavickers"
     },
-    "type": "module",
     "scripts": {
         "build": "webpack",
-        "test-models": "jest tests/models.test.js"
+        "test-models": "jest tests/models.spec.js"
     },
     "repository": {
         "type": "git",
@@ -32,12 +31,14 @@
     "devDependencies": {
         "@babel/cli": "^7.12.10",
         "@babel/core": "^7.12.10",
+        "@babel/node": "^7.12.10",
         "@babel/plugin-proposal-class-properties": "^7.12.1",
         "@babel/plugin-proposal-private-property-in-object": "^7.12.1",
         "@babel/plugin-transform-classes": "^7.12.1",
         "@babel/plugin-transform-runtime": "^7.12.10",
         "@babel/plugin-transform-template-literals": "^7.12.1",
         "@babel/preset-env": "^7.12.11",
+        "assert": "^2.0.0",
         "babel-eslint": "~10.1.0",
         "babel-jest": "~26.3.0",
         "babel-loader": "^8.2.2",
