--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
         "url": "https://github.com/mavickers/factor/issues"
     },
     "homepage": "https://github.com/mavickers/factor#readme",
-    "dependencies": {},
+    "dependencies": {
+    },
     "devDependencies": {
         "@babel/cli": "^7.12.10",
         "@babel/core": "^7.12.10",
         "@babel/node": "^7.12.10",
         "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
+        "@babel/plugin-proposal-optional-chaining": "^7.12.7",
         "@babel/plugin-proposal-private-property-in-object": "^7.12.1",
         "@babel/plugin-transform-classes": "^7.12.1",
         "@babel/plugin-transform-runtime": "^7.12.10",
