Pull PipelineArgs away from AutoModel, testing for PipelineArgs.

--- a/jest.config.json
+++ b/jest.config.json
@@ -7,11 +7,8 @@
     "transform": {
         "^.+\\.js$": [ "babel-jest", {
             "presets": [
-                [ "@babel/preset-env", {
-                    "targets": {
-                        "node": 10
-                    }
-                }]
+                [ "@babel/preset-env", { "targets": { "node": "current" } }],
+                "@babel/preset-typescript"
             ],
             "plugins": [
                 "@babel/plugin-proposal-class-properties",
