--- a/jest.config.json
+++ b/jest.config.json
@@ -7,8 +7,7 @@
     "transform": {
         "^.+\\.js$": [ "babel-jest", {
             "presets": [
-                [ "@babel/preset-env", { "targets": { "node": "current" } }],
-                "@babel/preset-typescript"
+                [ "@babel/preset-env", { "targets": { "node": "current" } }]
             ],
             "plugins": [
                 "@babel/plugin-proposal-class-properties",
