Separate pipeline tests into files; refactoring pipeline and pipeline filter.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "scripts": {
         "build": "webpack",
         "test-models": "jest tests/models.spec.js",
-        "test-pipeline": "jest tests/pipelines.spec.js"
+        "test-pipeline": "jest tests/pipelines/PipelineFilter.spec.js"
     },
     "repository": {
         "type": "git",
