--- a/jest.config.json
+++ b/jest.config.json
@@ -12,6 +12,7 @@
             "plugins": [
                 "@babel/plugin-proposal-class-properties",
                 "@babel/plugin-proposal-private-property-in-object",
+                "@babel/plugin-proposal-throw-expressions",
                 "@babel/plugin-syntax-dynamic-import",
                 "@babel/plugin-transform-classes",
                 "@babel/plugin-transform-runtime",
