--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
         "@babel/plugin-proposal-optional-chaining": "^7.12.7",
         "@babel/plugin-proposal-private-property-in-object": "^7.12.1",
+        "@babel/plugin-proposal-throw-expressions": "^7.12.1",
         "@babel/plugin-transform-classes": "^7.12.1",
         "@babel/plugin-transform-runtime": "^7.12.10",
         "@babel/plugin-transform-template-literals": "^7.12.1",
