--- a/jest.config.json
+++ b/jest.config.json
@@ -10,8 +10,8 @@
                 [ "@babel/preset-env", { "targets": { "node": "current" } }]
             ],
             "plugins": [
-                "@babel/plugin-proposal-class-properties",
-                "@babel/plugin-proposal-private-property-in-object",
+                [ "@babel/plugin-proposal-class-properties", { "loose": true } ],
+                [ "@babel/plugin-proposal-private-property-in-object", { "loose": true } ],
                 "@babel/plugin-proposal-throw-expressions",
                 "@babel/plugin-syntax-dynamic-import",
                 "@babel/plugin-transform-classes",
