--- a/jest.config.json
+++ b/jest.config.json
@@ -10,6 +10,7 @@
                 [ "@babel/preset-env", { "targets": { "node": "current" } }]
             ],
             "plugins": [
+                [ "@babel/plugin-proposal-decorators", { "decoratorsBeforeExport": true, "legacy": false } ],
                 [ "@babel/plugin-proposal-class-properties", { "loose": true } ],
                 [ "@babel/plugin-proposal-private-property-in-object", { "loose": true } ],
                 "@babel/plugin-proposal-throw-expressions",
