--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@babel/core": "^7.12.10",
         "@babel/node": "^7.12.10",
         "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/plugin-proposal-decorators": "^7.12.12",
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
         "@babel/plugin-proposal-optional-chaining": "^7.12.7",
         "@babel/plugin-proposal-private-property-in-object": "^7.12.1",
