--- a/jest.config.json
+++ b/jest.config.json
@@ -13,8 +13,12 @@
                 [ "@babel/plugin-proposal-decorators", { "legacy": true } ],
                 [ "@babel/plugin-proposal-class-properties", { "loose": true } ],
                 [ "@babel/plugin-proposal-private-property-in-object", { "loose": true } ],
+                "@babel/plugin-proposal-export-namespace-from",
+                "@babel/plugin-proposal-function-sent",
+                "@babel/plugin-proposal-numeric-separator",
                 "@babel/plugin-proposal-throw-expressions",
                 "@babel/plugin-syntax-dynamic-import",
+                "@babel/plugin-transform-arrow-functions",
                 "@babel/plugin-transform-classes",
                 "@babel/plugin-transform-runtime",
                 "@babel/plugin-transform-template-literals"
