--- a/package.json
+++ b/package.json
@@ -35,14 +35,19 @@
         "@babel/node": "^7.12.10",
         "@babel/plugin-proposal-class-properties": "^7.12.1",
         "@babel/plugin-proposal-decorators": "^7.12.12",
+        "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
+        "@babel/plugin-proposal-function-sent": "^7.12.1",
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
+        "@babel/plugin-proposal-numeric-separator": "^7.12.7",
         "@babel/plugin-proposal-optional-chaining": "^7.12.7",
         "@babel/plugin-proposal-private-property-in-object": "^7.12.1",
         "@babel/plugin-proposal-throw-expressions": "^7.12.1",
+        "@babel/plugin-transform-arrow-functions": "^7.12.1",
         "@babel/plugin-transform-classes": "^7.12.1",
         "@babel/plugin-transform-runtime": "^7.12.10",
         "@babel/plugin-transform-template-literals": "^7.12.1",
         "@babel/preset-env": "^7.12.11",
+        "@babel/preset-stage-2": "^7.8.3",
         "assert": "^2.0.0",
         "babel-eslint": "~10.1.0",
         "babel-jest": "~26.3.0",
