Working on Describable tests.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
         "url": "https://github.com/mavickers/factor/issues"
     },
     "homepage": "https://github.com/mavickers/factor#readme",
-    "dependencies": {},
+    "dependencies": {
+        "lodash.clonedeep": "^4.5.0",
+        "object-hash": "^2.1.1"
+    },
     "devDependencies": {
         "@babel/cli": "^7.12.10",
         "@babel/core": "^7.12.10",
