--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "core-js": "^3.6.5",
         "eslint": "~7.8.1",
         "jest": "^26.6.3",
+        "jest-extended": "^0.11.5",
         "npm": "^6.11.2",
         "npm-run-all": "~4.1.5",
         "path": "^0.12.7",
