--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "babel-jest": "~26.3.0",
         "babel-loader": "^8.2.2",
         "core-js": "^3.6.5",
+        "deep-object-diff": "^1.1.0",
         "eslint": "~7.8.1",
         "jest": "^26.6.3",
         "jest-extended": "^0.11.5",
