--- a/jest.config.json
+++ b/jest.config.json
@@ -23,6 +23,7 @@
                 "@babel/plugin-syntax-dynamic-import",
                 "@babel/plugin-transform-arrow-functions",
                 "@babel/plugin-transform-classes",
+                "@babel/plugin-transform-computed-properties",
                 "@babel/plugin-transform-runtime",
                 "@babel/plugin-transform-template-literals"
             ]
