--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@babel/plugin-proposal-throw-expressions": "^7.12.1",
         "@babel/plugin-transform-arrow-functions": "^7.12.1",
         "@babel/plugin-transform-classes": "^7.12.1",
+        "@babel/plugin-transform-computed-properties": "^7.12.13",
         "@babel/plugin-transform-runtime": "^7.12.10",
         "@babel/plugin-transform-template-literals": "^7.12.1",
         "@babel/preset-env": "^7.12.11",
