Rename ignore tests folder to not conflict with @ignore decoratore.

--- a/jest.config.json
+++ b/jest.config.json
@@ -5,7 +5,7 @@
         "mjs"
     ],
     "modulePathIgnorePatterns": [
-        "/ignore/"
+        "/_ignore/"
     ],
     "transform": {
         "^.+\\.js$": [ "babel-jest", {
